examples/negative/pipes/pipe_no_map/box.kai
# Issue #594 — module declares `pub type Box` but ships NO `map`.
# The cache puts `Box → box` but the qualified `box::map` lookup
# misses; the typer must say "module `box` declares `Box` but does
# not export `map`".

pub type Box[t] = MkBox(t)

pub fn unwrap[a](b: Box[a]) : a {
  match b {
    MkBox(v) -> v
  }
}
